feat: create nav and add svg image

--- a/case_angular/src/app/components/list/list.component.html
+++ b/case_angular/src/app/components/list/list.component.html
@@ -1,1 +1,22 @@
-<p>list works!</p>
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg bg-primary">
+  <div class=" container-fluid">
+    <h1 style="color: white; font-size: 32px; padding-left: 20px;">Case Angular</h1>
+    <div>
+      <button class="btn btn-success" style="background-color: #EC7001;">Adicionar Item</button>
+    </div>
+  </div>
+
+</nav>
+<div></div>
+
+<!--image section-->
+<div class="class container-fluid">
+  <div class="clss row">
+    <div class="class col-sm-5">
+      <div class="image">
+        <img src="../../../assets/svg/list_image.svg">
+      </div>
+    </div>
+  </div>
+</div>
