--- a/case_angular/src/app/components/list/list.component.html
+++ b/case_angular/src/app/components/list/list.component.html
@@ -6,17 +6,61 @@
       <button class="btn btn-success" style="background-color: #EC7001;">Adicionar Item</button>
     </div>
   </div>
-
 </nav>
-<div></div>
 
-<!--image section-->
+
 <div class="class container-fluid">
   <div class="clss row">
+    <!--image section-->
     <div class="class col-sm-5">
       <div class="image">
-        <img src="../../../assets/svg/list_image.svg">
+        <img src="../../../assets/svg/list_image.svg" class="img-fluid">
       </div>
+    </div>
+    <!--table-->
+    <div class="class col-sm-7">
+      <table class="table table-borderless mt-2">
+        <thead>
+          <tr>
+            <th scope="col">Nome do Item</th>
+            <th scope="col">Medida</th>
+            <th scope="col">Quantidade</th>
+            <th scope="col">Preço</th>
+            <th scope="col">Produto Perecível</th>
+            <th scope="col">Validade</th>
+            <th scope="col">Fabricação</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
