--- a/case_angular/src/app/components/list/list.component.html
+++ b/case_angular/src/app/components/list/list.component.html
@@ -3,7 +3,7 @@
   <div class=" container-fluid">
     <h1 style="color: white; font-size: 32px; padding-left: 20px;">Case Angular</h1>
     <div>
-      <button class="btn btn-success" style="background-color: #EC7001;">Adicionar Item</button>
+      <button class="btn btn-success" style="background-color: #EC7001;" routerLink="/additem">Adicionar Item</button>
     </div>
   </div>
 </nav>
