add image at add item component

--- a/case_angular/src/app/components/add-item/add-item.component.html
+++ b/case_angular/src/app/components/add-item/add-item.component.html
@@ -1,1 +1,10 @@
-<p>add-item works!</p>
+<div class="class container-fluid">
+  <div class="class row">
+    <div class="clsss col-sm-5">
+      <div class="class image">
+        <img src="../../../assets/svg/list_image.svg" class="img-fluid">
+        
+      </div>
+    </div>
+  </div>
+</div>
