add mock bootstrap form

--- a/case_angular/src/app/components/add-item/add-item.component.html
+++ b/case_angular/src/app/components/add-item/add-item.component.html
@@ -1,9 +1,33 @@
+<!-- image section -->
 <div class="class container-fluid">
   <div class="class row">
     <div class="clsss col-sm-5">
       <div class="class image">
         <img src="../../../assets/svg/list_image.svg" class="img-fluid">
-        
+      </div>
+    </div>
+    <!-- form section -->
+    <div class="class col-md-6">
+      <div class="class card">
+        <h5>Preencha os campos do formulário:</h5>
+        <div class="class row">
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
