--- a/case_angular/src/app/components/add-item/add-item.component.html
+++ b/case_angular/src/app/components/add-item/add-item.component.html
@@ -12,20 +12,50 @@
         <h5>Preencha os campos do formulário:</h5>
         <div class="class row">
           <form>
+            <!--Nome do Item-->
+            <div class="form-group mb-1">
+              <label for="exampleFormControlInput1">Nome do Item</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nome do Item">
+            </div>
+
+            <!--Unidade de Medida-->
+            <div class="form-group mb-1">
+              <label for="exampleFormControlSelect1">Unidade de Medida</label>
+              <select class="form-control" id="exampleFormControlSelect1">
+                <option>Litros</option>
+                <option>Quilogramas</option>
+                <option>Unidade</option>
+              </select>
+            </div>
+
+            <!--Quantidade-->
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <label for="exampleFormControlInput1">Quantidade</label>
+              <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="">
             </div>
+
+            <!--Preço-->
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <label for="exampleFormControlInput1">Preço</label>
+              <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="R$ 00,00">
             </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
+            <!--Produto Perecível-->
+            <div class="form-group mb-1">
+              <label for="exampleFormControlInput1">Produto Perecível</label>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <label class="form-check-label" for="flexRadioDefault1">
+                  Sim
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <label class="form-check-label" for="flexRadioDefault2">
+                  Não
+                </label>
+              </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
       </div>
