--- a/case_angular/src/app/components/add-item/add-item.component.html
+++ b/case_angular/src/app/components/add-item/add-item.component.html
@@ -13,13 +13,13 @@
         <div class="class row">
           <form>
             <!--Nome do Item-->
-            <div class="form-group mb-1">
+            <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Nome do Item</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nome do Item">
             </div>
 
             <!--Unidade de Medida-->
-            <div class="form-group mb-1">
+            <div class="form-group mb-4">
               <label for="exampleFormControlSelect1">Unidade de Medida</label>
               <select class="form-control" id="exampleFormControlSelect1">
                 <option>Litros</option>
@@ -29,19 +29,19 @@
             </div>
 
             <!--Quantidade-->
-            <div class="form-group">
+            <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Quantidade</label>
               <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="">
             </div>
 
             <!--Preço-->
-            <div class="form-group">
+            <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Preço</label>
               <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="R$ 00,00">
             </div>
 
             <!--Produto Perecível-->
-            <div class="form-group mb-1">
+            <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Produto Perecível</label>
               <div class="form-check">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
@@ -55,6 +55,11 @@
                   Não
                 </label>
               </div>
+            </div>
+
+            <div class="clss text-center">
+              <button type="submit" class="btn btn-primary mx-3">Salvar</button>
+              <button type="submit" class="btn btn-secondary">Cancelar</button>
             </div>
           </form>
         </div>
