danger button and routlink at cancel button

--- a/case_angular/src/app/components/add-item/add-item.component.html
+++ b/case_angular/src/app/components/add-item/add-item.component.html
@@ -59,7 +59,7 @@
 
             <div class="clss text-center">
               <button type="submit" class="btn btn-primary mx-3">Salvar</button>
-              <button type="submit" class="btn btn-secondary">Cancelar</button>
+              <button type="submit" class="btn btn-danger" routerLink="/list">Cancelar</button>
             </div>
           </form>
         </div>
