--- a/case_angular/src/app/components/add-item/add-item.component.html
+++ b/case_angular/src/app/components/add-item/add-item.component.html
@@ -43,14 +43,14 @@
             <!--Produto Perecível-->
             <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Produto Perecível</label>
-              <div class="form-check" formControlName="product">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+              <div class="form-check">
+                <input class=" form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked formControlName="product" value="Sim">
                 <label class="form-check-label" for="flexRadioDefault1">
                   Sim
                 </label>
               </div>
               <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" formControlName="product" value="Não">
                 <label class="form-check-label" for="flexRadioDefault2">
                   Não
                 </label>
