--- a/case_angular/src/app/components/add-item/add-item.component.html
+++ b/case_angular/src/app/components/add-item/add-item.component.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="clss text-center">
-              <button type="submit" (click)="submitItems()" class="btn btn-primary mx-3">Salvar</button>
+              <button type="submit" (click)="submitItems()" [disabled]="this.addItensForm.invalid" class="btn btn-primary mx-3">Salvar</button>
               <button type="submit" class="btn btn-danger" routerLink="/list">Cancelar</button>
             </div>
           </form>
