create update component and delete func

--- a/case_angular/src/app/components/list/list.component.html
+++ b/case_angular/src/app/components/list/list.component.html
@@ -35,7 +35,9 @@
             <td>{{item.measure}}</td>
             <td>{{item.quantity}}</td>
             <td>{{item.price}}</td>
-            <td><i style="color: blue" class="fas fa-edit"></i>&nbsp;<i style="color: red" class="fas fa-trash"></i></td>
+            <td><i style="color: blue" class="fas fa-edit"></i>&nbsp;<i style="color: red" class="fas fa-trash">
+              </i>
+            </td>
           </tr>
         </tbody>
       </table>
