--- a/case_angular/src/app/components/update-items/update-items.component.html
+++ b/case_angular/src/app/components/update-items/update-items.component.html
@@ -9,7 +9,7 @@
     <!-- form section -->
     <div class="class col-md-6">
       <div class="class card">
-        <h5>Preencha os campos do formulário:</h5>
+        <h5>Edite os campos do formulário:</h5>
         <div class="row">
           <form>
             <!--Nome do Item-->
