--- a/case_angular/src/app/components/add-item/add-item.component.html
+++ b/case_angular/src/app/components/add-item/add-item.component.html
@@ -15,7 +15,7 @@
             <!--Nome do Item-->
             <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Nome do Item</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nome do Item" formControlName="nameItem">
+              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome do Item" formControlName="nameItem">
             </div>
 
             <!--Unidade de Medida-->
