--- a/case_angular/src/app/components/update-items/update-items.component.html
+++ b/case_angular/src/app/components/update-items/update-items.component.html
@@ -15,13 +15,13 @@
             <!--Nome do Item-->
             <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Nome do Item</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nome do Item">
+              <input type="text" [(ngModel)]="itemData.nameItem" name="nameItem" class="form-control" id="exampleFormControlInput1" placeholder="Nome do Item">
             </div>
 
             <!--Unidade de Medida-->
             <div class="form-group mb-4">
               <label for="exampleFormControlSelect1">Unidade de Medida</label>
-              <select class="form-control" id="exampleFormControlSelect1">
+              <select class="form-control" id="exampleFormControlSelect1" [(ngModel)]="itemData.measure" name="measure">
                 <option>Litros</option>
                 <option>Quilogramas</option>
                 <option>Unidade</option>
@@ -31,13 +31,13 @@
             <!--Quantidade-->
             <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Quantidade</label>
-              <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="">
+              <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="" [(ngModel)]="itemData.quantity" name="quantity">
             </div>
 
             <!--Preço-->
             <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Preço</label>
-              <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="R$ 00,00">
+              <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="R$ 00,00" [(ngModel)]="itemData.price" name="price">
             </div>
 
             <div class="clss text-center">
