feat: update items from form

--- a/case_angular/src/app/components/update-items/update-items.component.html
+++ b/case_angular/src/app/components/update-items/update-items.component.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="clss text-center">
-              <button type="submit" class="btn btn-primary mx-3">Salvar</button>
+              <button type="submit" (click)="updateItems()" class="btn btn-primary mx-3">Salvar</button>
               <button type="submit" class="btn btn-danger" routerLink="/list">Cancelar</button>
             </div>
           </form>
