--- a/case_angular/src/app/components/login-signup/login-signup.component.html
+++ b/case_angular/src/app/components/login-signup/login-signup.component.html
@@ -1,1 +1,26 @@
-<p>login-signup works!</p>
+<!--login-->
+<section class="vh-100">
+  <div class="container h-100">
+    <div class="row justify-content-center align-items-center h-100">
+      <div class="col col-xl-9">
+        <div class="card">
+          <div class="row g-0">
+            <div class="col-md-4 col-lg-6">
+              <img src="../../../assets/svg/list_image.svg" class="img-fluid">
+            </div>
+            <!--form section-->
+            <div class="col-md-6 col-lg-6 align-items-center">
+              <div class="card-body p-4 p-lg-5 text-black">
+                <form action="">
+                  <div class="d-flex alignh-items-center mb-3 pb-1">
+                    <i class=" fas fa-cubes fa-2x"></i>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
