add input for login

--- a/case_angular/src/app/components/login-signup/login-signup.component.html
+++ b/case_angular/src/app/components/login-signup/login-signup.component.html
@@ -13,7 +13,19 @@
               <div class="card-body p-4 p-lg-5 text-black">
                 <form action="">
                   <div class="d-flex alignh-items-center mb-3 pb-1">
-                    <i class=" fas fa-cubes fa-2x"></i>
+                    <i class=" fas fa-cubes fa-2x" style="color: #EC7001;"></i>
+                    <span class="h1 fw-bold mb-0" style="margin-left: 10px;">Login</span>
+                  </div>
+                  <h5 class="fw-normal mb-3 pb-2" style="letter-spacing: 1px;">Acesse a sua conta</h5>
+
+                  <div class="form-outline mb-2">
+                    <label class="form label">E-mail</label>
+                    <input type="email" class="form-control form-control-lg">
+                  </div>
+
+                  <div class="form-outline mb-2">
+                    <label class="form label">Senha</label>
+                    <input type="password" class="form-control form-control-lg">
                   </div>
                 </form>
               </div>
