--- a/case_angular/src/app/components/login-signup/login-signup.component.html
+++ b/case_angular/src/app/components/login-signup/login-signup.component.html
@@ -13,7 +13,7 @@
               <div class="card-body p-4 p-lg-5 text-black">
                 <form action="">
                   <div class="d-flex alignh-items-center mb-3 pb-1">
-                    <i class=" fas fa-cubes fa-2x" style="color: #EC7001;"></i>
+                    <i class=" fas fa-cubes fa-2x" style="color: #02329D;"></i>
                     <span class="h1 fw-bold mb-0" style="margin-left: 10px;">Login</span>
                   </div>
                   <h5 class="fw-normal mb-3 pb-2" style="letter-spacing: 1px;">Acesse a sua conta</h5>
@@ -27,6 +27,12 @@
                     <label class="form label">Senha</label>
                     <input type="password" class="form-control form-control-lg">
                   </div>
+                  <div class="pt-1 mb-3 text-center">
+                    <button class="btn btn-dark" type="button">Entrar</button>
+                  </div>
+                  <p class="mt-5 pb-lg-2">Não tem conta?
+                    <a style="color: #02329D;cursor: pointer;font-weight: 700; text-decoration: underline;">Faça seu cadastro aqui.</a>
+                  </p>
                 </form>
               </div>
             </div>
