create sign up model and set placeholder for login inputs

--- a/case_angular/src/app/components/login-signup/login-signup.component.html
+++ b/case_angular/src/app/components/login-signup/login-signup.component.html
@@ -20,12 +20,12 @@
 
                   <div class="form-outline mb-2">
                     <label class="form label">E-mail</label>
-                    <input type="email" class="form-control form-control-lg">
+                    <input type="email" class="form-control form-control-lg" placeholder="Digite seu e-mail">
                   </div>
 
                   <div class="form-outline mb-2">
                     <label class="form label">Senha</label>
-                    <input type="password" class="form-control form-control-lg">
+                    <input type="password" class="form-control form-control-lg" placeholder="Digite sua senha">
                   </div>
                   <div class="pt-1 mb-3 text-center">
                     <button class="btn btn-dark" type="button">Entrar</button>
@@ -65,17 +65,17 @@
 
                   <div class="form-outline mb-2">
                     <label class="form label">Nome</label>
-                    <input type="text" class="form-control form-control-lg">
+                    <input type="text" class="form-control form-control-lg" placeholder="Digite seu nome">
                   </div>
 
                   <div class="form-outline mb-2">
                     <label class="form label">E-mail</label>
-                    <input type="email" class="form-control form-control-lg">
+                    <input type="email" class="form-control form-control-lg" placeholder="Digite seu e-mail">
                   </div>
 
                   <div class="form-outline mb-2">
                     <label class="form label">Senha</label>
-                    <input type="password" class="form-control form-control-lg">
+                    <input type="password" class="form-control form-control-lg" placeholder="Digite sua senha">
                   </div>
                   <div class="pt-1 mb-3 text-center">
                     <button class="btn" type="button" style="background-color: #02329D; color: white">Cadastrar</button>
