--- a/case_angular/src/app/components/login-signup/login-signup.component.html
+++ b/case_angular/src/app/components/login-signup/login-signup.component.html
@@ -56,7 +56,7 @@
             <!--form section-->
             <div class="col-md-6 col-lg-6 align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
-                <form action="">
+                <form [formGroup]="signUpForm">
                   <div class="d-flex alignh-items-center mb-3 pb-1">
                     <i class=" fas fa-cubes fa-2x" style="color: #02329D;"></i>
                     <span class="h1 fw-bold mb-0" style="margin-left: 10px;">Cadastro</span>
@@ -65,20 +65,20 @@
 
                   <div class="form-outline mb-2">
                     <label class="form label">Nome</label>
-                    <input type="text" class="form-control form-control-lg" placeholder="Digite seu nome">
+                    <input type="text" class="form-control form-control-lg" placeholder="Digite seu nome" formControlName="name">
                   </div>
 
                   <div class="form-outline mb-2">
                     <label class="form label">E-mail</label>
-                    <input type="email" class="form-control form-control-lg" placeholder="Digite seu e-mail">
+                    <input type="email" class="form-control form-control-lg" placeholder="Digite seu e-mail" formControlName="email">
                   </div>
 
                   <div class="form-outline mb-2">
                     <label class="form label">Senha</label>
-                    <input type="password" class="form-control form-control-lg" placeholder="Digite sua senha">
+                    <input type="password" class="form-control form-control-lg" placeholder="Digite sua senha" formControlName="password">
                   </div>
                   <div class="pt-1 mb-3 text-center">
-                    <button class="btn" type="button" style="background-color: #02329D; color: white">Cadastrar</button>
+                    <button class="btn" type="button" style="background-color: #02329D; color: white" (click)="submitSignUp()" [disabled]="this.signUpForm.invalid">Cadastrar</button>
                   </div>
                   <p class="mt-5 pb-lg-2">Já tem conta?
                     <a (click)="login()" style="color: #02329D;cursor: pointer;font-weight: 700; text-decoration: underline;">Faça seu Login aqui.</a>
