--- a/case_angular/src/app/components/login-signup/login-signup.component.html
+++ b/case_angular/src/app/components/login-signup/login-signup.component.html
@@ -11,7 +11,7 @@
             <!--form section-->
             <div class="col-md-6 col-lg-6 align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
-                <form action="">
+                <form [formGroup]="loginForm">
                   <div class="d-flex alignh-items-center mb-3 pb-1">
                     <i class=" fas fa-cubes fa-2x" style="color: #02329D;"></i>
                     <span class="h1 fw-bold mb-0" style="margin-left: 10px;">Login</span>
@@ -20,15 +20,15 @@
 
                   <div class="form-outline mb-2">
                     <label class="form label">E-mail</label>
-                    <input type="email" class="form-control form-control-lg" placeholder="Digite seu e-mail">
+                    <input type="email" class="form-control form-control-lg" placeholder="Digite seu e-mail" formControlName="email">
                   </div>
 
                   <div class="form-outline mb-2">
                     <label class="form label">Senha</label>
-                    <input type="password" class="form-control form-control-lg" placeholder="Digite sua senha">
+                    <input type="password" class="form-control form-control-lg" placeholder="Digite sua senha" formControlName="password">
                   </div>
                   <div class="pt-1 mb-3 text-center">
-                    <button class="btn btn-dark" type="button">Entrar</button>
+                    <button class="btn btn-dark" type="button" (click)="loginUser()">Entrar</button>
                   </div>
                   <p class="mt-5 pb-lg-2">Não tem conta?
                     <a (click)="signUp()" style="color: #02329D;cursor: pointer;font-weight: 700; text-decoration: underline;">Faça seu cadastro aqui.</a>
