--- a/case_angular/src/app/components/add-item/add-item.component.html
+++ b/case_angular/src/app/components/add-item/add-item.component.html
@@ -40,6 +40,18 @@
               <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="R$ 00,00" formControlName="price">
             </div>
 
+            <div class="form-group mb-4">
+              <label class="d-block">Produto Perecível? </label>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                <label class="form-check-label" for="inlineCheckbox1"> Sim</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                <label class="form-check-label" for="inlineCheckbox2">Não</label>
+              </div>
+            </div>
+
             <div class="clss text-center">
               <button type="submit" (click)="submitItems(this.addItensForm.value)" [disabled]="this.addItensForm.invalid" class="btn btn-primary mx-3">Salvar</button>
               <button type="submit" class="btn btn-danger" routerLink="/list">Cancelar</button>
