--- a/case_angular/src/app/components/list/list.component.html
+++ b/case_angular/src/app/components/list/list.component.html
@@ -27,7 +27,8 @@
             <th scope="col">Medida</th>
             <th scope="col">Quantidade</th>
             <th scope="col">Preço</th>
-            <th scope="col">Ação</th>
+            <th scope="col">Pd. Perecível</th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody>
@@ -36,6 +37,7 @@
             <td>{{item.measure}}</td>
             <td>{{item.quantity}}</td>
             <td>{{item.price}}</td>
+            <td>{{item.product}}</td>
             <td><i style="color: blue" routerLink="/updateitem/{{item.id}}" class="fas fa-edit"></i>&nbsp;<i (click)="delete(item.id!)" style="color: red" class="fas fa-trash">
               </i>
             </td>
